# c-template

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  setup.sh
include/: template_assert.h  template_attributes.h  template_checked_math.h  template_dyn_array.h  template_dyn_array_typed.h  template_error.h  template_growable_buffer.h  template_growable_buffer_typed.h  template_log.h  template_memory.h  template_time.h  template_types.h
src/: main.c  template_assert.c  template_dyn_array.c  template_error.c  template_growable_buffer.c  template_log.c  template_log_internal.h  template_memory.c  template_time.c
